WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56592
WKErrors need the PeerCertificateChain for certificate errors
https://bugs.webkit.org/show_bug.cgi?id=56592
Summary
WKErrors need the PeerCertificateChain for certificate errors
Sam Weinig
Reported
2011-03-17 14:20:11 PDT
WKErrors need the PeerCertificateChain for cert errors
Attachments
Patch
(9.33 KB, patch)
2011-03-17 14:22 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-03-17 14:22:16 PDT
Created
attachment 86093
[details]
Patch
Sam Weinig
Comment 2
2011-03-17 14:22:57 PDT
<
rdar://problem/8951784
>
Sam Weinig
Comment 3
2011-03-17 14:25:36 PDT
Landed in
r81387
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug